--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,31 @@
 astroid==1.6.3
+awsebcli==3.12.4
+botocore==1.10.12
+cement==2.8.2
 certifi==2018.4.16
 chardet==3.0.4
-colorama==0.3.9
+colorama==0.3.7
 Django==2.0.4
 django-javascript-settings==1.1.2
 django-widget-tweaks==1.4.2
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.14
 idna==2.6
 isort==4.3.4
+jmespath==0.9.3
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+pathspec==0.5.5
 pylint==1.8.4
+python-dateutil==2.7.2
 pytz==2018.4
-requests==2.18.4
+PyYAML==3.12
+requests==2.9.1
+semantic-version==2.5.0
 six==1.11.0
+tabulate==0.7.5
+termcolor==1.1.0
 urllib3==1.22
+websocket-client==0.47.0
 wrapt==1.10.11
